--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
 		<input type="text"  class="calculator-screen" value="0" id= "result"></disable>
 
-		<div class="calculator-keys">
+		<div id="calculator-keys">
 			<button type="button" class="suma" value="+" name="data-oper">+</button>
 			<button type="button" class="resta" value="-"name="data-oper">-</button>
-			<button type="button" class="multiplicacion" value="*"name="data-oper">*</button>
+			<button type="button" class="multiplicacion" value="*"name="data-oper">x</button>
 			<button type="button" class="division" value="/"name="data-oper">/</button>
 
 			<button type="button" class="7" value="7"name= "data-number">7</button>
@@ -31,7 +31,7 @@
 			<button type="button" class="3" value="3"name= "data-number">3</button>
 
 			<button type="button" class="0" value="0"name= "data-number">0</button>	
-			<button type="button" class="decimal" value=".">.</button>
+			<button type="button" class="decimal" value="." name="data-number">.</button>
 			<button type="button" class="all-clear" value="all-clear" name="data-clear">AC</button>
 
 			<button type="button" class="equal-sign" value="=" name="data-equal">=</button>
